--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 propertyone=this value is from properties file
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://mysql:3306/sampledb
+spring.datasource.url=jdbc:mysql://mysql-2-kktsn:3306/sampledb
 spring.datasource.username=ckspringboot
 spring.datasource.password=ckspringboot
 
