spring boot connection to multiple db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 propertyone=this value is from properties file
 
-## MySQL
-spring.datasource.url=jdbc:mysql://ckmysqldbservicename:3306/cksampledb
+## MySQL - ckmysqldbservicename
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/fact
 spring.datasource.username=ckspringboot
 spring.datasource.password=ckspringboot
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.second.datasource.jdbc-url=jdbc:mysql://localhost:3306/dim
+spring.second.datasource.username=ckspringboot
+spring.second.datasource.password=ckspringboot
+#spring.second.datasource.driverClassName=com.mysql.jdbc.Driver
 
 # drop n create table, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
