testing secrets in openshift

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,14 @@ propertyone=this value is from properties file
 ## MySQL - ckmysqldbservicename
 spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/fact
 spring.datasource.username=ckspringboot
-spring.datasource.password=ckspringboot
+#below pwd to be un-commented
+#spring.datasource.password=ckspringboot
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.second.datasource.jdbc-url=jdbc:mysql://localhost:3306/dim
 spring.second.datasource.username=ckspringboot
-spring.second.datasource.password=ckspringboot
+#below pwd to be un-commented
+#spring.second.datasource.password=ckspringboot
 #spring.second.datasource.driverClassName=com.mysql.jdbc.Driver
 
 # drop n create table, good for testing, comment this in production
